Fix link overlapping

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -4,7 +4,6 @@
 
 main {
     .container {
-        z-index: -1;
         width: 100%;
         min-height: 90vh;
         display: flex;
@@ -14,13 +13,12 @@ main {
             justify-content: center;
             align-items: center;
             .summary {
-                z-index: -1;
                 position: fixed;
                 top: 50%;
                 transform: translateY(-50%);
                 text-align: center;
                 max-width: 920px;
-                padding: 2rem;
+                padding: 0 2rem;
                 h1 {
                     font-size: 4rem;
                     margin-top: .5rem;
