--- a/assets/css/partials/header.css
+++ b/assets/css/partials/header.css
@@ -1,4 +1,5 @@
 header {
+    z-index: 1;
     min-height: 5vh;
     font-size: 1.5rem;
     display: flex;
